# en-reader-2

./: .env.example  .gitignore  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: mwe.txt  phrasal_verbs.txt  stop_words.txt
deploy/: Caddyfile  Caddyfile.example  README.md  autopull.sh  backup.sh  bootstrap.sh  en-reader-autopull.service  en-reader-autopull.timer  en-reader-backup.service  en-reader-backup.timer  en-reader.service  notify.sh  restore.sh
design/: README.md
design/chats/: chat1.md
design/project/: EN Reader Hi-Fi.html  EN Reader Prototype (standalone).html  EN Reader Prototype.html  EN Reader Wireframes.html  hi-primitives.jsx  hi-screens.jsx  hi-styles.css  primitives.jsx  screens-1.jsx  screens-2.jsx  (+1 more)
docs/: API.md  migrations.md  openapi.json
extension/: README.md  manifest.json
scripts/: build_demo.py  dump_openapi.py  generate_migration_fixtures.py  seed.py  seed_catalog.py
tasks/: M01-1-nlp-pipeline.md  M01-2-stop-words-translatable.md  M01-3-mwe-detection.md  M01-4-phrasal-verbs.md  M01-5-golden-tests.md  M02-1-chunker.md  M03-1-seed-pipeline.md  M03-2-spa-skeleton.md  M03-3-reader-render.md  M04-1-llm-translate-endpoint.md  M04-2-inline-translation-ui.md  M05-1-in-memory-dictionary.md  M06-1-persistent-dictionary.md  M06-2-skip-llm-on-hit.md  M07-1-inline-images.md  M08-1-books-pages-persistence.md  M08-2-content-api.md  M09-1-books-list-api.md  M09-2-library-screen.md  M09-3-reader-header-navigation.md  M10-1-progress-api.md  M10-2-scroll-restore.md  M10-3-lazy-sentinels.md  M10-4-save-progress-debounce.md  M10-5-current-book-redirect.md  M11-1-user-id-migration.md  M11-2-auth-api.md  M11-3-isolation-login-ui.md  M12-1-parser-txt.md  M12-2-parser-fb2.md  M12-3-parser-epub.md  M12-4-upload-endpoint.md  M13-1-vps-systemd-bootstrap.md  M13-2-autopull.md  M13-3-telegram-notify.md  M13-4-tls-lets-encrypt.md  M14-1-logging-debug-endpoints.md  M14-2-security-headers-csp-csrf.md  M14-3-rate-limits.md  M14-4-sqlite-backups.md  (+16 more)
tests/: conftest.py  test_api_error_paths.py  test_articles.py  test_auth.py  test_auth_extra.py  test_books_api.py  test_books_storage.py  test_catalog.py  test_chunker.py  test_content_api.py  test_content_endpoint.py  test_current_book.py  test_debug_endpoints.py  test_demo_endpoint.py  test_design_tokens.py  test_dictionary.py  test_dictionary_card.py  test_dictionary_screen.py  test_dispatcher.py  test_golden.py  test_images.py  test_inline_translation.py  test_integration_cross_book.py  test_integration_happy_path.py  test_integration_resume.py  test_invariants.py  test_isolation.py  test_isolation_extra.py  test_lazy_sentinels.py  test_library_view.py  test_llm_cache.py  test_login_ui.py  test_m21_clients.py  test_migration_v4_to_v5.py  test_migration_v6_to_v7.py  test_migration_v7_to_v8.py  test_migrations.py  test_mwe.py  test_mwe_extra.py  test_nlp_performance.py  (+31 more)
(+61 files in other folders)
