[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "en-reader"
version = "0.1.0"
description = "English reader with inline Russian translations for B1-C1 learners."
requires-python = ">=3.11"
dependencies = [
    "spacy>=3.8,<3.9",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.8",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "bcrypt>=4.1",
    "email-validator>=2.1",
    "itsdangerous>=2.2",
    "pytest",
    "ruff",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
